/*
 * Copyright 2022 Google LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package stability.model;

import "src/devtools/common/metrics/stability/model/proto/error_id.proto";

option java_package = "com.google.devtools.common.metrics.stability.model.proto";
option java_outer_classname = "ExceptionProto";

// Proto representation of a Java Throwable.
message ExceptionDetail {
  // Required.
  ExceptionSummary summary = 1;
  // Optional.
  ExceptionDetail cause = 2;
  // Optional.
  repeated ExceptionDetail suppressed = 3;
}

// Summary of an exception without its cause and suppressed.
message ExceptionSummary {
  // Required.
  ErrorId error_id = 1;
  // Required.
  string message = 2;
  // Required.
  ExceptionClassType class_type = 3;
  // Required.
  StackTrace stack_trace = 4;
}

message ExceptionClassType {
  // Required.
  string class_name = 1;
}

message StackTrace {
  repeated StackTraceElement element = 1;
}

message StackTraceElement {
  string class_name = 1;
  string method_name = 2;
  string file_name = 3;
  int32 line_number = 4;
}
